// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render success/error message if props is empty 1`] = `<DocumentFragment />`;

exports[`error message is rendered if props is set to 'error' 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error
  </div>
</DocumentFragment>
`;

exports[`success message is rendered if props is set to 'success' 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Success
  </div>
</DocumentFragment>
`;
